--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0ThGjNmTZpWo"
       },
@@ -68,7 +68,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/df_limpo.csv')\n",
+        "df = pd.read_csv('/content/df_datostratadosparte1.csv')\n",
         "df.sample(10)"
       ],
       "metadata": {
