--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -41,7 +41,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Extracción de datos"
+        "#🛠️ Preparación de los Datos\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "YSU-zbtGbMZD"
@@ -50,7 +53,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Traemos el dataFrame de la parte 1 del challenge, en el cual ya tenemos los datos limpios y listos para trabajar."
+        "#Extracción del Archivo Tratado\n",
+        "Se importa el DataFrame generado en la Parte 1 del desafío, el cual ya cuenta con los datos debidamente procesados y preparados para su análisis en esta etapa."
       ],
       "metadata": {
         "id": "GQN-G9H6bVwb"
@@ -68,7 +72,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/df_datostratadosparte1.csv')\n",
+        "df = pd.read_csv('/content/df_limpioEtapa1.csv')\n",
         "df.sample(10)"
       ],
       "metadata": {
@@ -733,16 +737,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Preparar los datos"
-      ],
-      "metadata": {
-        "id": "YSYkNN-Pgtxo"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Eliminar columnas"
+        "# Eliminar columnas Irrelevantes"
       ],
       "metadata": {
         "id": "da5PHwz3icU-"
@@ -751,7 +746,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Eliminamos la columna donde tenemos el ID del cliente, porque no es necesario pra el anáslisis."
+        "Se elimina la columna correspondiente al ID del cliente, dado que no aporta valor analítico al modelo y únicamente representa un identificador sin relevancia estadística para el estudio."
       ],
       "metadata": {
         "id": "5b5hUlywiJc-"
@@ -780,7 +775,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Podemos agrupar no y no service internet de varias columnas en las que tenemos tres categorías, esto nos permite reducir la multicolinealidad y simplificar los datosn sin perder la importancia que estos tienen para desarrollar el modelo predictivo."
+        "Para reducir la multicolinealidad, se unificaron las categorías “No” y “No service” presentes en diversas columnas con tres niveles. Esta transformación permite simplificar los datos sin comprometer la relevancia de la información, garantizando así una representación más consistente para el desarrollo del modelo predictivo."
       ],
       "metadata": {
         "id": "n6ADHgNVjOSG"
@@ -810,7 +805,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Enconding"
+        "## 🔄 Codificación de Variables Categóricas (Encoding)"
       ],
       "metadata": {
         "id": "fqLRuhp6rGVh"
@@ -819,7 +814,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Transformamos las variables categóricas a formato númerico para hacerlas apatas a los algoritmos de Machine Learning."
+        "Con el fin de garantizar la compatibilidad de las variables categóricas con los algoritmos de *Machine Learning*, se aplicó un proceso de **codificación a formato numérico**.  \n",
+        "\n",
+        "En este caso, se utilizó el método de **One-Hot Encoding**, que permite representar las categorías como variables binarias (0/1), evitando introducir sesgos y preservando la información de manera adecuada.  "
       ],
       "metadata": {
         "id": "ynjchc8srOHR"
@@ -1632,7 +1629,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Verificar nulos"
+        "## 🔍 Verificación de Valores Nulos  "
       ],
       "metadata": {
         "id": "ZMV353ClsXx-"
@@ -1641,7 +1638,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vamos a identificar si tenemos valores nulos."
+        "Como parte del proceso de preparación de los datos, es fundamental **identificar la presencia de valores nulos** dentro del dataset.  \n",
+        "La detección temprana de datos faltantes permite aplicar estrategias de tratamiento (imputación, eliminación o transformación), garantizando la calidad y consistencia del modelo predictivo.  \n"
       ],
       "metadata": {
         "id": "aokf6frlseJ_"
@@ -1833,9 +1831,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Y encontramos que tenemos valores nulos en Total.Day y account.Charges.Total.\n",
-        "Por ello, debemos decidir si eliminar las filas o reemplazar por 0. Podemos eliminar siendo que la cantidad de nulos es pequeña y si quisieramos reemplazar debemos tener en cuenta que si lo hacemos es para representar la ausencia de un dato o servicio.\n",
-        "Por lo tanto, se decide eliminar las filas."
+        "## 🧹 Tratamiento de Valores Nulos  \n",
+        "\n",
+        "Durante la verificación se identificaron valores nulos en las columnas **`Total.Day`** y **`account.Charges.Total`**.  \n",
+        "Dado que la proporción de valores faltantes es reducida, se evaluaron dos posibles estrategias de tratamiento:  \n",
+        "\n",
+        "1. **Reemplazo por 0:**  \n",
+        "   Esta opción es válida únicamente si se desea representar explícitamente la ausencia de información o servicio. Sin embargo, podría introducir un sesgo no deseado en el análisis.  \n",
+        "\n",
+        "2. **Eliminación de filas:**  \n",
+        "   Al tratarse de un volumen pequeño de datos nulos, la eliminación no afecta de manera significativa la integridad del dataset.  \n",
+        "\n",
+        "### ✅ Decisión  \n",
+        "Se optó por **eliminar las filas con valores nulos**, priorizando la consistencia y calidad de los datos antes del modelado.  \n",
+        "\n"
       ],
       "metadata": {
         "id": "2fFJtUa5tATn"
@@ -2040,7 +2049,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Verificación de la Proporción de Cancelación (Churn)"
+        "## 📊 Verificación de la Proporción de Cancelación (Churn)  \n",
+        "\n",
+        "Como siguiente paso, se evaluó la **distribución de la variable objetivo (`Churn`)** con el fin de identificar posibles problemas de desbalance en las clases.  \n",
+        "\n",
+        "### 📌 Ejemplo en Python  \n",
+        "\n",
+        "```python\n",
+        "# Verificamos la proporción de clientes que cancelaron vs los que permanecieron\n",
+        "df_encoded['Churn_Yes'].value_counts(normalize=True)\n"
       ],
       "metadata": {
         "id": "HSOabm3juoLu"
