--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -2051,13 +2051,7 @@
       "source": [
         "## 📊 Verificación de la Proporción de Cancelación (Churn)  \n",
         "\n",
-        "Como siguiente paso, se evaluó la **distribución de la variable objetivo (`Churn`)** con el fin de identificar posibles problemas de desbalance en las clases.  \n",
-        "\n",
-        "### 📌 Ejemplo en Python  \n",
-        "\n",
-        "```python\n",
-        "# Verificamos la proporción de clientes que cancelaron vs los que permanecieron\n",
-        "df_encoded['Churn_Yes'].value_counts(normalize=True)\n"
+        "Como siguiente paso, se evaluó la **distribución de la variable objetivo (`Churn`)** con el fin de identificar posibles problemas de desbalance en las clases.  \n"
       ],
       "metadata": {
         "id": "HSOabm3juoLu"
@@ -2066,6 +2060,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Verificamos la proporción de clientes que cancelaron vs los que permanecieron\n",
         "df_encoded['Churn_Yes'].value_counts(normalize=True)"
       ],
       "metadata": {
@@ -2135,7 +2130,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Obtenemos que la proporción no esta adecuada porque sabemos que el minimo de desbalance es de 40%"
+        "🔹 Resultados\n",
+        "\n",
+        "Los resultados obtenidos indican que la proporción entre clientes que cancelan y los que permanecen no es adecuada, ya que se observa un desbalance mayor al permitido.\n",
+        "En términos generales, se considera aceptable un mínimo de 40% en la clase minoritaria para evitar un sesgo excesivo en los modelos de clasificación.\n",
+        "\n",
+        "🔍 Conclusión\n",
+        "\n",
+        "La variable objetivo presenta desbalance, lo que implica que será necesario aplicar técnicas de balanceo de clases (por ejemplo, undersampling, oversampling, SMOTE) antes de entrenar los modelos de Machine Learning, con el fin de garantizar predicciones más robustas y evitar sesgos hacia la clase mayoritaria."
       ],
       "metadata": {
         "id": "f4lMYPB6wl5V"
@@ -2233,16 +2235,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Normalización o Estandarización"
-      ],
-      "metadata": {
-        "id": "UGp_76GBhX9D"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "StandardScaler o MinMaxScaler"
+        "# ⚖️ Normalización y Estandarización  \n",
+        "\n",
+        "En la preparación de datos para *Machine Learning*, es fundamental ajustar la escala de las variables numéricas, especialmente cuando los modelos son sensibles a las magnitudes.  \n",
+        "Para ello se aplican dos técnicas principales:  \n",
+        "\n",
+        "- **StandardScaler:** transforma los datos para que tengan **media 0 y desviación estándar 1**.  \n",
+        "- **MinMaxScaler:** escala los valores a un **rango fijo (por defecto entre 0 y 1)**, conservando la proporción relativa.  \n",
+        "\n"
       ],
       "metadata": {
         "id": "DXTzSQRWczkT"
@@ -2737,7 +2737,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Análisis de correlación -- Matriz de correlación"
+        "# 📊 Análisis de Correlación – Matriz de Correlación  \n",
+        "\n",
+        "Como parte del preprocesamiento, se realizó un **análisis de correlación** con el objetivo de identificar la relación entre las variables numéricas del dataset.  \n",
+        "La matriz de correlación permite detectar variables altamente correlacionadas que podrían generar **multicolinealidad**, afectando la estabilidad de los modelos predictivos.  \n"
       ],
       "metadata": {
         "id": "DARCkhQ0hjPK"
@@ -2777,6 +2780,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###🔍 Nota\n",
+        "\n",
+        "\n",
+        "*  Valores cercanos a +1 indican una fuerte correlación positiva.\n",
+        "\n",
+        "* Valores cercanos a -1 reflejan una fuerte correlación negativa.\n",
+        "\n",
+        "* Valores próximos a 0 implican ausencia de relación lineal significativa.\n",
+        "\n",
+        "* Variables con correlación muy alta entre sí (> 0.8) pueden ser candidatas a eliminación o transformación para reducir multicolinealidad."
+      ],
+      "metadata": {
+        "id": "EsgWLJvD5YPX"
+      }
     },
     {
       "cell_type": "code",
