--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -26,6 +26,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 📊 Telecom X – Análisis y Predicción de Cancelación (Churn)\n",
+        "\n",
+        "## 📌 Descripción del Proyecto  \n",
+        "Este proyecto tiene como objetivo analizar y predecir la **cancelación de clientes (churn)** en la empresa **Telecom X**.  \n",
+        "\n",
+        "En la **Parte 1**, se llevó a cabo un **análisis exploratorio de datos (EDA)** para comprender los principales factores asociados a la evasión de clientes, incluyendo el impacto de los contratos, cargos mensuales, soporte técnico y métodos de pago.  \n",
+        "\n",
+        "En la **Parte 2**, se desarrollaron **modelos predictivos de Machine Learning** para anticipar qué clientes tienen mayor probabilidad de abandonar la compañía, permitiendo así generar estrategias proactivas de retención.  \n"
+      ],
+      "metadata": {
+        "id": "t8EDJVWR6jEI"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -53,8 +69,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Extracción del Archivo Tratado\n",
-        "Se importa el DataFrame generado en la Parte 1 del desafío, el cual ya cuenta con los datos debidamente procesados y preparados para su análisis en esta etapa."
+        "# 📂 Extracción del Archivo Tratado  \n",
+        "\n",
+        "Se importa el **DataFrame** generado en la **Parte 1 del desafío**, el cual ya cuenta con los datos debidamente procesados y preparados para su análisis en esta etapa.  \n"
       ],
       "metadata": {
         "id": "GQN-G9H6bVwb"
@@ -737,19 +754,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Eliminar columnas Irrelevantes"
+        "# 🗑️ Eliminación de Columnas Irrelevantes  \n",
+        "\n",
+        "Se elimina la columna correspondiente al **ID del cliente**, dado que no aporta valor analítico al modelo y únicamente representa un identificador sin relevancia estadística para el estudio.  \n"
       ],
       "metadata": {
         "id": "da5PHwz3icU-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Se elimina la columna correspondiente al ID del cliente, dado que no aporta valor analítico al modelo y únicamente representa un identificador sin relevancia estadística para el estudio."
-      ],
-      "metadata": {
-        "id": "5b5hUlywiJc-"
       }
     },
     {
