--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -2156,7 +2156,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Balanceo de clases"
+        "# ⚖️ Balanceo de Clases  \n",
+        "\n",
+        "La variable objetivo (`Churn`) presenta un desbalance significativo entre clientes que cancelan y clientes que permanecen en la compañía.  \n",
+        "Para evitar sesgos en los modelos de *Machine Learning* y mejorar su capacidad de generalización, se aplicaron tres técnicas de balanceo de clases:  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 1️⃣ Undersampling (Reducción de la clase mayoritaria)  \n",
+        "- **Método:** `RandomUnderSampler`  \n",
+        "- **Estrategia:** reducir aleatoriamente el número de registros de la clase mayoritaria para igualar la clase minoritaria.  \n",
+        "- **Ventaja:** simplifica el dataset y acelera el entrenamiento.  \n",
+        "- **Desventaja:** puede perder información valiosa al eliminar registros.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2️⃣ Oversampling (Aumento de la clase minoritaria)  \n",
+        "- **Método:** `RandomOverSampler`  \n",
+        "- **Estrategia:** duplicar aleatoriamente registros de la clase minoritaria hasta equilibrar ambas clases.  \n",
+        "- **Ventaja:** evita pérdida de información.  \n",
+        "- **Desventaja:** puede introducir sobreajuste (*overfitting*) al replicar datos.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 3️⃣ SMOTE (*Synthetic Minority Over-sampling Technique*)  \n",
+        "- **Método:** `SMOTE`  \n",
+        "- **Estrategia:** generar registros sintéticos de la clase minoritaria a partir de interpolaciones entre vecinos más cercanos.  \n",
+        "- **Ventaja:** balancea el dataset sin duplicar datos, creando variabilidad artificial.  \n",
+        "- **Desventaja:** puede introducir ruido si las clases no están bien separadas.  \n"
       ],
       "metadata": {
         "id": "n_TGCAigg8mK"
@@ -2241,6 +2268,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###🔍 Conclusión\n",
+        "\n",
+        "El uso de técnicas de balanceo de clases es esencial para mejorar la detección de clientes en riesgo de cancelación. Entre ellas, SMOTE suele ser la más recomendada, ya que introduce mayor diversidad en los datos de la clase minoritaria, evitando tanto la pérdida de información como la duplicación excesiva."
+      ],
+      "metadata": {
+        "id": "RKC8sfCw77tL"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2749,8 +2787,8 @@
       "source": [
         "# 📊 Análisis de Correlación – Matriz de Correlación  \n",
         "\n",
-        "Como parte del preprocesamiento, se realizó un **análisis de correlación** con el objetivo de identificar la relación entre las variables numéricas del dataset.  \n",
-        "La matriz de correlación permite detectar variables altamente correlacionadas que podrían generar **multicolinealidad**, afectando la estabilidad de los modelos predictivos.  \n"
+        "Para comprender mejor las relaciones entre las variables numéricas del dataset, se construyó una **matriz de correlación**.  \n",
+        "Este análisis permite identificar patrones de dependencia y posibles problemas de multicolinealidad, así como detectar **variables con alta correlación con la variable objetivo (`Churn`)**, las cuales pueden ser candidatas relevantes para el modelo predictivo.  \n"
       ],
       "metadata": {
         "id": "DARCkhQ0hjPK"
@@ -2797,13 +2835,15 @@
         "###🔍 Nota\n",
         "\n",
         "\n",
-        "*  Valores cercanos a +1 indican una fuerte correlación positiva.\n",
+        "* Valores cercanos a +1 → fuerte correlación positiva.\n",
         "\n",
-        "* Valores cercanos a -1 reflejan una fuerte correlación negativa.\n",
+        "* Valores cercanos a -1 → fuerte correlación negativa.\n",
         "\n",
-        "* Valores próximos a 0 implican ausencia de relación lineal significativa.\n",
+        "* Valores cercanos a 0 → relación lineal débil o inexistente.\n",
         "\n",
-        "* Variables con correlación muy alta entre sí (> 0.8) pueden ser candidatas a eliminación o transformación para reducir multicolinealidad."
+        "En este contexto, se debe prestar especial atención a las variables que muestran alta correlación con Churn, ya que representan factores clave para explicar y predecir la cancelación de clientes.\n",
+        "\n",
+        "Estas variables serán insumos relevantes para la selección de features en la etapa de modelado."
       ],
       "metadata": {
         "id": "EsgWLJvD5YPX"
@@ -4314,7 +4354,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Análisis dirigido"
+        "# 🎯 Análisis Dirigido: Variables Clave vs Cancelación (Churn)  \n",
+        "\n",
+        "Además del análisis general de correlación, resulta fundamental investigar cómo variables específicas se relacionan con la **cancelación de clientes (Churn)**.  \n",
+        "Este enfoque permite identificar **patrones y tendencias** que podrían convertirse en predictores relevantes dentro del modelo de Machine Learning.  \n",
+        "\n",
+        "En particular, se analizaron las siguientes variables:  \n",
+        "- **Tiempo de contrato (Tenure)** × Churn  \n",
+        "- **Gasto total (Total Charges)** × Churn  \n",
+        "- **Relación entre Tenure y Total Charges** × Churn  \n",
+        "- **Tipo de contrato (Contract Type)** × Churn  \n"
       ],
       "metadata": {
         "id": "bhnM3CZ5hwVp"
@@ -4401,6 +4450,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 🔍 Interpretación  \n",
+        "\n",
+        "**1. Tenure vs Churn**  \n",
+        "- Los clientes con menor tiempo de permanencia presentan una mayor probabilidad de cancelación.  \n",
+        "- A medida que aumenta el tenure, la tasa de churn disminuye.  \n",
+        "\n",
+        "**2. Total Charges vs Churn**  \n",
+        "- Los clientes con cargos acumulados más bajos tienden a abandonar antes, lo que sugiere que los primeros meses de relación son críticos para la fidelización.  \n",
+        "\n",
+        "**3. Tenure + Total Charges vs Churn (Scatter Plot)**  \n",
+        "- Se observa una concentración de clientes que cancelan en niveles bajos de tenure y cargos totales.  \n",
+        "- Los clientes con mayor antigüedad y gasto acumulado muestran mayor fidelización.  \n",
+        "\n",
+        "**4. Contract Type vs Churn**  \n",
+        "- Los contratos de **mes a mes (Month-to-Month)** presentan la mayor tasa de cancelación.  \n",
+        "- Los contratos de mayor duración (**1 año y 2 años**) reflejan una menor propensión al churn.  \n"
+      ],
+      "metadata": {
+        "id": "5X_XckUs-Ql6"
+      }
     },
     {
       "cell_type": "markdown",
