--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -4478,7 +4478,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Modelado predictivo -- Separación de datos"
+        "# 🤖 Modelación Predictiva"
+      ],
+      "metadata": {
+        "id": "hnD1kSZxBW2S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Separación de Datos  \n",
+        "\n",
+        "Antes de entrenar los modelos de *Machine Learning*, es fundamental **dividir el conjunto de datos en entrenamiento y prueba**, con el fin de evaluar el rendimiento de los algoritmos de manera objetiva.  \n",
+        "\n",
+        "Una práctica común consiste en utilizar:  \n",
+        "- **70%** de los datos para **entrenamiento**.  \n",
+        "- **30%** de los datos para **prueba**.  \n",
+        "\n",
+        "En bases de datos más grandes, también es habitual emplear divisiones de **80/20**.  \n",
+        "Además, se recomienda realizar la división de manera **estratificada** para asegurar que la proporción de clases (Churn vs No Churn) se mantenga equilibrada en ambos subconjuntos.  \n"
       ],
       "metadata": {
         "id": "kp6uQG1Nh_bq"
@@ -4531,6 +4549,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Resultados de la Separación de Datos  \n",
+        "\n",
+        "Tras dividir el conjunto en **70% entrenamiento** y **30% prueba**, se obtuvieron los siguientes tamaños y proporciones:  \n",
+        "\n",
+        "- **Tamaño de entrenamiento:** (4,922 filas × 25 columnas)  \n",
+        "- **Tamaño de prueba:** (2,110 filas × 25 columnas)  \n",
+        "\n",
+        "### 🔹 Distribución en entrenamiento  \n",
+        "- **Clientes que NO cancelaron:** 73.4%  \n",
+        "- **Clientes que cancelaron:** 26.6%  \n",
+        "\n",
+        "### 🔹 Distribución en prueba  \n",
+        "- **Clientes que NO cancelaron:** 73.4%  \n",
+        "- **Clientes que cancelaron:** 26.6%  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🔍 Interpretación  \n",
+        "- La división mantuvo la **proporción original de clases** (*stratify=y* funcionó correctamente).  \n",
+        "- Esto asegura que tanto el conjunto de entrenamiento como el de prueba representan fielmente el desbalance natural de la variable objetivo (`Churn`).  \n",
+        "- Con esta separación, el modelo podrá entrenarse en un dataset robusto y ser evaluado de manera realista en datos independientes.  \n"
+      ],
+      "metadata": {
+        "id": "2B93X-69Bocv"
+      }
     },
     {
       "cell_type": "markdown",
