--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -4478,7 +4478,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🤖 Modelación Predictiva"
+        "# 🤖 Modelado Predictivo"
       ],
       "metadata": {
         "id": "hnD1kSZxBW2S"
@@ -4582,7 +4582,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Creación de modelos"
+        "## 🤖 Creación de Modelos Predictivos (con y sin normalización)\n",
+        "\n",
+        "Con el fin de comparar enfoques, se implementan **dos modelos de clasificación** con distintos requerimientos de preprocesamiento:\n",
+        "\n",
+        "- **Modelo 1 — Regresión Logística (con normalización):** sensible a la escala de las variables, por lo que se integra `StandardScaler` en un `Pipeline`.\n",
+        "- **Modelo 2 — Random Forest (sin normalización):** basado en árboles, **no requiere** normalización ya que no utiliza distancias ni optimiza coeficientes en la misma escala.\n",
+        "\n",
+        "> **Justificación:**  \n",
+        "> - *Regresión Logística / KNN*: la normalización evita que variables con mayor magnitud sesguen los coeficientes o las distancias.  \n",
+        "> - *Árbol de Decisión / Random Forest*: son invariantes a la escala; la normalización no aporta mejoras sistemáticas.\n"
       ],
       "metadata": {
         "id": "XGt7IKEuiOcy"
@@ -5064,7 +5073,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Evaluación de los modelos"
+        "## 📊 Evaluación de Modelos – Resultados y Comparación  \n",
+        "\n",
+        "Se evaluaron dos modelos predictivos para identificar clientes en riesgo de cancelación (*Churn*):  \n",
+        "- **Regresión Logística (con normalización)**  \n",
+        "- **Random Forest (sin normalización)**  \n"
       ],
       "metadata": {
         "id": "NSmfa0ksiYA1"
@@ -5190,10 +5203,57 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Análisis de la Importancia de las Variables"
+        "### 🔹 Resultados Métricos  \n",
+        "\n",
+        "**1. Regresión Logística**  \n",
+        "- Accuracy: **0.803**  \n",
+        "- Precision: **0.657**  \n",
+        "- Recall: **0.542**  \n",
+        "- F1-Score: **0.594**  \n",
+        "\n",
+        "**2. Random Forest**  \n",
+        "- Accuracy: **0.793**  \n",
+        "- Precision: **0.642**  \n",
+        "- Recall: **0.501**  \n",
+        "- F1-Score: **0.563**  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🔍 Análisis Crítico  \n",
+        "\n",
+        "- **Mejor desempeño global:**  \n",
+        "  La **Regresión Logística** superó al Random Forest en todas las métricas principales (Accuracy, Precision, Recall y F1-Score).  \n",
+        "  - Esto sugiere que, para este dataset, un modelo lineal es suficiente para capturar las relaciones relevantes entre las variables.  \n",
+        "\n",
+        "- **Recall y F1-Score:**  \n",
+        "  Ambos modelos muestran un **recall moderado (~0.54 en Logística y ~0.50 en Random Forest)**, lo que indica que todavía existen clientes que cancelan y que no son detectados por los modelos.  \n",
+        "  El **F1-Score más alto de la Regresión Logística (0.59 vs 0.56)** refleja un mejor equilibrio entre precisión y sensibilidad.  \n",
+        "\n",
+        "- **Overfitting / Underfitting:**  \n",
+        "  - El Random Forest no muestra un gran salto respecto a la Regresión Logística, lo que indica que no está explotando relaciones no lineales complejas → posible **underfitting** si los hiperparámetros no están optimizados.  \n",
+        "  - La Regresión Logística mantiene un rendimiento estable sin señales evidentes de sobreajuste.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 📌 Conclusiones  \n",
+        "\n",
+        "- La **Regresión Logística** es actualmente el modelo más sólido para predecir churn en Telecom X.  \n",
+        "- El **Random Forest** podría mejorar con ajustes de hiperparámetros (ej. `n_estimators`, `max_depth`, `min_samples_split`) o con técnicas de optimización como *GridSearchCV* o *RandomizedSearchCV*.  \n",
+        "- Se recomienda explorar técnicas de **balanceo de clases más avanzadas** (SMOTE, ADASYN) y modelos adicionales (ej. **Gradient Boosting, XGBoost, LightGBM**) para aumentar el **Recall**, dado que identificar correctamente a los clientes en riesgo es crítico para la estrategia de retención.  "
       ],
       "metadata": {
-        "id": "KWBbRnSRikts"
+        "id": "OxObEUA9EkVK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 📌 Análisis de Variables Relevantes para la Predicción de Cancelación (Churn)  \n",
+        "\n",
+        "Con el fin de comprender los factores que más influyen en la cancelación de clientes, se evaluaron las variables más relevantes identificadas por **Regresión Logística** (coeficientes) y **Random Forest** (importancia de variables).  "
+      ],
+      "metadata": {
+        "id": "iBhMSh2NFUlF"
       }
     },
     {
@@ -5243,6 +5303,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**Conclusión:** la **antigüedad (tenure)** y los **tipos de contrato** son variables protectoras clave, mientras que ciertos servicios (fibra óptica, streaming TV) y métodos de pago incrementan el riesgo de churn.  \n"
+      ],
+      "metadata": {
+        "id": "u4ZyoxuYGLMI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Importancia de variables en Random Forest\n",
@@ -5282,6 +5352,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**Conclusión:** Random Forest coincide en la relevancia de **gastos (total y mensual)** y **tenure** como variables principales. Además, incorpora el **consumo diario** y características adicionales (género, soporte técnico) como factores predictivos secundarios.  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qBvAD19MF1a0"
+      }
     },
     {
       "cell_type": "code",
@@ -5331,45 +5412,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Conclusión\n",
-        "Se analizaron los datos de clientes para entender por qué algunos cancelan el servicio (Churn) y construimos modelos que nos ayudan a predecir quiénes tienen más riesgo de cancelar.\n",
+        "## 📊 Comparación Visual de Importancia de Variables  \n",
         "\n",
-        "Descubrimos que el 26% de los clientes cancela, mientras que la mayoría (74%) permanece activa.\n",
-        "Los factores más importantes que explican la cancelación son:\n",
-        "- Tener un contrato mes a mes.\n",
-        "- Ser cliente nuevo (poco tiempo con la empresa).\n",
-        "- Pagar cargos mensuales altos.\n",
-        "- Usar fibra óptica como servicio de internet.\n",
+        "Además del análisis numérico, se generaron gráficos que muestran las **10 variables más relevantes** según cada modelo:  \n",
         "\n",
-        "Se probaron dos modelos de predicción:\n",
-        "- La Regresión Logística, que es más simple y ayuda a entender las relaciones.\n",
-        "- El Random Forest, que resultó más preciso y equilibrado para detectar cancelaciones. El Random Forest es el modelo más adecuado para predecir cancelación en este caso.\n",
-        "Las variables clave para la cancelación son:\n",
-        "Tipo de contrato, Tiempo con la empresa, Nivel de cargos (mensuales y totales),\n",
-        "Tipo de servicio de internet\n",
+        "- **Regresión Logística:** se graficaron los coeficientes absolutos, lo que permite observar la magnitud y dirección del impacto de cada variable en la probabilidad de cancelación.  \n",
+        "- **Random Forest:** se representaron las importancias calculadas por el modelo en función de la reducción de impureza en las divisiones de los árboles.  \n",
         "\n",
-        "En cuanto a la evaluación de modelos, se obtuvo:\n",
-        "Métricas comparadas (accuracy, precision, recall, f1-score):\n",
-        "- Regresión Logística:\n",
-        "Buen recall → detecta bien a los clientes que cancelan.\n",
-        "Menor precision → algunos falsos positivos.\n",
+        "### 🔍 Interpretación de los Gráficos  \n",
+        "- En **Regresión Logística**, destacan **`customer.tenure`** y los tipos de contrato (1 año, 2 años) como factores protectores, mientras que **fibra óptica, streaming TV y pago electrónico** aumentan la probabilidad de churn.  \n",
+        "- En **Random Forest**, sobresalen **`account.Charges.Total`**, **`customer.tenure`** y **`account.Charges.Monthly`** como variables centrales, junto con el **consumo diario (`Total.Day`)**.  \n",
+        "- Ambos modelos coinciden en la relevancia de **tenure, cargos y contratos**, pero difieren en el peso asignado a servicios adicionales y factores demográficos.  \n",
         "\n",
-        "-Random Forest:\n",
-        "Mejor accuracy y balance entre precision y recall.\n",
-        "Modelo más robusto para predecir Churn.\n",
+        "---\n",
         "\n",
-        "Esto permite diseñar estrategias de retención enfocadas en:\n",
-        "- Ofrecer incentivos a clientes con contratos mes a mes.\n",
-        "- Programas de fidelización para clientes nuevos.\n",
-        "- Ajustes de tarifas para quienes tienen cargos elevados.\n",
-        "\n",
-        "Con los resultados, la empresa puede tomar medidas para retener clientes, como:\n",
-        "- Ofrecer planes más estables (contratos anuales).\n",
-        "- Crear programas de bienvenida y fidelización para nuevos clientes.\n",
-        "- Ajustar precios o beneficios para quienes tienen cargos más altos."
+        "✅ Estos gráficos permiten **comparar de manera intuitiva** las diferencias en cómo cada modelo interpreta la relevancia de las variables, enriqueciendo el análisis estratégico de los factores que impulsan la cancelación de clientes.  \n"
       ],
       "metadata": {
-        "id": "U0hV2KxclFqW"
+        "id": "vMPGn-tXGTzd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 📌 Conclusión\n",
+        "\n",
+        "El análisis realizado en **Telecom X** permitió identificar los factores más influyentes en la cancelación de clientes, combinando el **desempeño de los modelos predictivos** y la **relevancia de las variables**.  \n",
+        "\n",
+        "### 🔹 Factores Clave Identificados  \n",
+        "- **Tiempo de permanencia (Tenure):** los clientes con menor antigüedad presentan mayor riesgo de cancelación.  \n",
+        "- **Tipo de contrato:** los contratos de corto plazo (*month-to-month*) concentran la mayor tasa de churn, mientras que los contratos anuales y bianuales muestran un fuerte efecto protector.  \n",
+        "- **Cargos (Monthly y Total):** clientes con cargos acumulados elevados o cargos mensuales poco competitivos son más propensos a abandonar.  \n",
+        "- **Servicio de Internet (Fibra óptica):** se asocia a un mayor nivel de cancelación, lo que podría reflejar problemas en la calidad percibida del servicio o en la relación costo-beneficio.  \n",
+        "- **Método de pago (Electronic Check):** los usuarios que utilizan este medio presentan un mayor riesgo de churn, posiblemente relacionado con la experiencia de pago.  \n",
+        "- **Servicios adicionales (Streaming TV, Soporte Técnico):** tienen un impacto en la fidelización, ya sea como motivadores de permanencia o como puntos de fricción.  \n",
+        "\n",
+        "### 🔹 Estrategias de Retención Recomendadas  \n",
+        "1. **Incentivar contratos de mayor plazo:** ofrecer beneficios adicionales (descuentos, promociones, upgrades) para migrar a contratos anuales o bianuales.  \n",
+        "2. **Segmentación por riesgo:** diseñar campañas específicas para clientes con bajo tenure y altos cargos acumulados, que constituyen el grupo más vulnerable.  \n",
+        "3. **Revisión del servicio de fibra óptica:** realizar mejoras técnicas y reforzar la comunicación de valor agregado frente a competidores.  \n",
+        "4. **Optimizar la experiencia de pago:** promover métodos automáticos (tarjeta de crédito, débito bancario) y reducir fricciones en clientes que usan *electronic check*.  \n",
+        "5. **Fortalecer servicios de valor agregado:** potenciar la calidad del soporte técnico y el diseño de paquetes de entretenimiento (ej. streaming) que incrementen la satisfacción y la lealtad.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "✅ En conclusión, la combinación de análisis estadístico y modelos predictivos confirma que el churn en Telecom X está principalmente determinado por la **antigüedad, tipo de contrato, cargos, servicio de internet y métodos de pago**.  \n",
+        "Implementar las estrategias señaladas permitirá **reducir la cancelación, optimizar la rentabilidad y fortalecer la relación con los clientes** en el mediano y largo plazo.  \n"
+      ],
+      "metadata": {
+        "id": "c5hnuLDaGx51"
       }
     }
   ]
