--- a/datostratadosparte1.ipynb
+++ b/datostratadosparte1.ipynb
@@ -5235,7 +5235,7 @@
         "\n",
         "---\n",
         "\n",
-        "### 📌 Conclusiones  \n",
+        "###  Conclusiones  \n",
         "\n",
         "- La **Regresión Logística** es actualmente el modelo más sólido para predecir churn en Telecom X.  \n",
         "- El **Random Forest** podría mejorar con ajustes de hiperparámetros (ej. `n_estimators`, `max_depth`, `min_samples_split`) o con técnicas de optimización como *GridSearchCV* o *RandomizedSearchCV*.  \n",
